# python-template

./: .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
docs/source/: conf.py
project_name/: greeter.py
tests/: test_greeter.py
