[project]
name = "project_name"
version = "0.0.0"
description = "A simple template project."
authors = [{ name = "Mario Potato", email = "mario.potato@univr.it" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "BSD-2-Clause"

[project.optional-dependencies]
dev = [
    "radon>=6.0.1,<7",
    "lizard>=1.17.13,<2",
    "pre-commit>=4.0.1,<5",
    "mypy>=1.13.0,<2",
    "ruff>=0.8.3,<0.9",
    "tox>=4.23.2,<5",
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "sphinx>=8.1.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinx-autoapi>=3.4.0,<4",
    "furo>=2024.8.6,<2025",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Google style uses 80 chars
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Google Python Style Guide compliant rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "D",      # pydocstyle (docstring conventions)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # docstrings not required in tests
]

[tool.ruff.lint.pydocstyle]
# Google docstring convention
convention = "google"

[tool.ruff.lint.isort]
# Google style: absolute imports, sorted
known-first-party = ["machine_data_model"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
